<resources>
    <string name="app_name">YummyApp</string>

    <string name="area">Area</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="food_thumbnail">Food Thumbnail</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="no_item">No Item</string>
    <string name="search">Search</string>
    <string name="search_food">Search food</string>
    <string name="youtube_video">YouTube Video</string>
</resources>