<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.detail.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/root_padding"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/iv_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/dim_gray"
                app:layout_constraintTop_toBottomOf="@id/iv_thumbnail" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/root_padding"
                android:layout_marginTop="@dimen/root_padding"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_thumbnail"
                tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit." />

            <TextView
                android:id="@+id/tv_area_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/root_padding"
                android:layout_marginTop="16dp"
                android:text="@string/area"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/root_padding"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/tv_area_title"
                tools:text="Lorem ipsum dolor sit amet" />

            <TextView
                android:id="@+id/tv_ingredients_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/root_padding"
                android:layout_marginTop="16dp"
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_area" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/root_padding"
                app:layout_constraintTop_toBottomOf="@id/tv_ingredients_title"
                tools:listitem="@layout/item_food_ingredient" />

            <TextView
                android:id="@+id/tv_instructions_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/root_padding"
                android:layout_marginTop="16dp"
                android:text="@string/instructions"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/rv_ingredients" />

            <TextView
                android:id="@+id/tv_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/root_padding"
                android:layout_marginTop="4dp"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/tv_instructions_title"
                tools:text="Lorem ipsum dolor sit amet" />

            <TextView
                android:id="@+id/tv_youtube_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/root_padding"
                android:layout_marginTop="16dp"
                android:text="@string/youtube_video"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/tv_instructions" />

            <TextView
                android:id="@+id/tv_youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/root_padding"
                android:layout_marginTop="4dp"
                android:autoLink="web"
                android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                app:layout_constraintTop_toBottomOf="@id/tv_youtube_title"
                tools:text="Lorem ipsum dolor sit amet" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/root_padding"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/baseline_favorite_24"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>